--- a/ConsultaMedicamentos.Application/ConsultaMedicamentos.Application.csproj
+++ b/ConsultaMedicamentos.Application/ConsultaMedicamentos.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.13.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ConsultaMedicamentos.Domain\ConsultaMedicamentos.Domain.csproj" />
   </ItemGroup>
 
